--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -299,3 +299,33 @@ body{
     animation-delay: 3s;
     background: var(--dark-orange);
   }
+
+
+  /* ABOUT ME HEADING */ 
+
+  .about-me-headings {
+      display: inline-block;
+      width: 100%;
+      height: 30rem;
+      text-align: center;
+  }
+
+  .experience {
+      margin-top: 2rem;
+      display: flex;
+      color: white;
+      justify-content: center;
+      align-items: center;
+  }
+
+  .experience > span {
+      font-size: 3rem;
+      color: var(--dark-orange);
+  }
+  
+  .experience > p {
+      font-size: 1.5rem;
+      margin: 0 ;
+  }
+
+  
