--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-html { font-size: 16px ; scroll-behavior: smooth;}
+html { font-size: 16px ; scroll-behavior: smooth; } 
 
 :root{
     --express: #000037;
@@ -310,6 +310,11 @@ body{
       text-align: center;
   }
 
+  .about-me-headings > h1 {
+      margin-top: 2rem;
+      text-decoration: underline;
+  }
+
   .experience {
       margin-top: 2rem;
       display: flex;
@@ -328,4 +333,143 @@ body{
       margin: 0 ;
   }
 
+  /* ABOUT ME SERVICES*/
+
+  .services-i-offer {
+      
+      width: 100%;
+      height: 5rem;
+      text-align: center;
+      
+  }
+
+  .services-i-offer > h1 {
+    text-decoration: underline;
+}
+
+@media(max-width : 500px) {
+    .services-i-offer > h1 {
+        font-size: 2rem;
+        margin-top: 2rem;
+    }
+}
+
+
+  .click-me {
+      width: 100%;
+     
+  }
+
+  .click-me img {
+       width: 50%;
+       height: 15rem;
+       margin-top: -80px;
+  }
   
+ 
+.card-container {
+    display: flex;
+    width: 100%;
+    height: 25rem;
+}
+
+@media (max-width : 600px) {
+
+    .card-container {
+        display: inline;
+    }
+
+    .card-container .card {
+        width: 30rem;
+        height: 20rem;
+        margin: 1rem auto;
+    }
+}
+
+/* Flipping cards */
+
+.card {
+    margin: 0 auto;
+    width: 20rem;
+    height: 20rem;
+    perspective: 1000px;
+  }
+  
+  .card__inner {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .card__inner.is-flipped {
+    transform: rotateY(180deg);
+  }
+  
+  
+  .card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 16px;
+    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+  }
+  
+  .card__face--front {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-width: 6px;
+  border-style: solid;
+  border-image: linear-gradient(to right, var(--dark-orange), darkorchid) 5;
+  }
+  
+  .card__face--front h2 {
+    color: #FFF;
+    font-size: 2rem;
+   
+  }
+  
+  .card__face--back {
+    border-width: 6px;
+    border-style: solid;
+    border-image: linear-gradient(to right, var(--dark-orange), darkorchid) 5;
+    transform: rotateY(180deg);
+    text-align: center;
+  }
+  
+  .card__content {
+    width: 100%;
+    height: 100%;
+    font-size: 0.8rem;
+    color: white;
+  
+  }
+
+  .card__content > h1 {
+      margin-top: 0.5rem;
+  }
+
+  .card__content > p {
+      margin-top: -50px;
+  }
+  
+  
+  .card__header:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: 0px 0px 50% 0px;
+  }
+  
+ 
