--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -21,7 +21,7 @@ html { font-size: 16px ; scroll-behavior: smooth; }
 
 ::before,
 	::after {
-		box-sizing: border-box;
+		box-sizing: inherit;
 	}
 
 
@@ -38,6 +38,9 @@ p { font-family: 'Inder', sans-serif; line-height: 28px; margin-bottom: 15px; co
 
 body{
     background-color: black;
+    overflow-x: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
 /* NAVBAR  */
@@ -178,7 +181,7 @@ body{
     color: var(--dark-orange); font-family: "Great Vibes", cursive; font-size: 4rem; line-height: 160px; font-weight: normal; margin-bottom: 0px; margin-top: 40px; text-align: center; text-shadow: 0 1px 1px #fff; 
 }
 
-.landing-btn{
+.landing-buttons{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -188,9 +191,11 @@ body{
 
 
 
-.landing-btn > button {
-    background-color: var(--dark-orange);
-  border: none;
+.landing-btn  {
+    border-width: 6px;
+    border-style: solid;
+    border-image: linear-gradient(to right, var(--dark-orange), darkorchid) 5;
+    background: transparent;
   color: white;
   padding: 0.8rem;
   text-align: center;
@@ -212,7 +217,7 @@ body{
 }
 
 @media screen and (max-width : 600px) {
-    .landing-btn > button {
+    .landing-buttons > button {
         color: black;
         margin-top: -50px;
     }
@@ -221,8 +226,8 @@ body{
     }
 }
 
-.landing-btn > button:hover {
-    opacity: 2;
+.landing-buttons > button:hover {
+    opacity: 6;
 }
 
 /* LANDING EFFECT */
@@ -472,4 +477,128 @@ body{
     border-radius: 0px 0px 50% 0px;
   }
   
+ /* Experience Containers */
  
+
+  .experience-header {
+      text-align: center;
+    text-decoration: underline;
+     color: white;
+     padding-top: 2rem;
+     
+ }
+
+ /* EXPERIENCE COMPONENT */ 
+
+ svg {
+    width: 100%;
+    height: 100%;
+    fill: currentColor; }
+  
+  img {
+    width: 80%;
+    max-width: 80%;
+    vertical-align: middle; }
+  
+  .project-container {
+
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 30rem;
+    padding: 0 3rem;
+}
+  
+  .project {
+    margin: 30px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    align-items: center; }
+    @media screen and (max-width: 768px) {
+      .project {
+        align-items: flex-start; } }
+  
+  .project-content {
+    position: relative;
+    grid-column: 1 / 7;
+    grid-row: 1 / -1; }
+    @media (max-width: 600px) {
+      .project-content {
+        grid-column: 1 / -1;
+        padding: 40px; } }
+    .project-content .project-label {
+      color: #64ffda;
+      font-family: monospace; }
+    .project-content .project-title {
+      font-size: 2rem;
+      margin: 10px 0 30px;
+      color: #eee; }
+    .project-content .project-details {
+      font-size: 15px;
+      line-height: 1.5;
+      color: #aaa; }
+      .project-content .project-details p {
+        background-color: #252525;
+        padding: 20px 25px; }
+        @media (max-width: 600px) {
+          .project-content .project-details p {
+            background-color: transparent;
+            padding: 20px 0; } }
+      .project-content .project-details ul {
+        display: flex;
+        margin-top: 20px; }
+        .project-content .project-details ul li {
+          margin-right: 20px;
+          color: #aaa;
+          font-family: monospace; }
+  
+  .project-img {
+    position: relative;
+    z-index: -1;
+    background-color: var(--express);
+    background: linear-gradient(0.4turn, var(--dark-orange), var(--purple));
+    border-radius: 2px;
+    grid-column: 6 / -1;
+    grid-row: 1 / -1; }
+
+.project-img .code-img {
+    background-color: var(--express);
+    background: linear-gradient(0.4turn, var(--dark-orange), var(--purple));
+}
+
+
+    @media screen and (max-width: 768px) {
+      .project-img {
+        height: 100%;
+    margin: 2rem; } }
+    @media (max-width: 600px) {
+      .project-img {
+        grid-column: 1 / -1;
+        opacity: 0.25; } }
+    .project-img:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 3;
+      background-color: #0a192f;
+      mix-blend-mode: screen;
+      border-radius: 2px; }
+    .project-img img {
+      border-radius: 2px;
+      position: relative;
+      mix-blend-mode: multiply;
+      filter: grayscale(100%) contrast(1); }
+      @media screen and (max-width: 768px) {
+        .project-img img {
+          object-fit: cover;
+          width: auto;
+          height: 100%; } }
+  
+
